<resources>
    <string name="app_name">Internship App</string>
    <string name="signup">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email_id">Email-Id</string>
    <string name="name">Name</string>
    <string name="signup_page">Sign Up Page</string>
    <string name="login">Login</string>
    <string name="price_symbol">₹</string>
</resources>