<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/yellow"
    android:orientation="vertical"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/signup_title"
        style="@style/bold_20_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/signup_page"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/signup_name"
        style="@style/regular_18_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_border"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/signup_email"
        style="@style/regular_18_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_border"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/signup_contact"
        style="@style/regular_18_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_border"
        android:hint="Contact No."
        android:inputType="number"
        android:maxLength="10"
        android:padding="10dp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_border"
        android:padding="10dp">
        <LinearLayout
            android:id="@+id/signup_password_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/signup_password_hide_iv"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_hide" />
            <ImageView
                android:visibility="gone"
                android:id="@+id/signup_password_show_iv"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_show" />
            
        </LinearLayout>
        <EditText
            android:id="@+id/signup_password"
            style="@style/regular_18_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/signup_password_layout"
            android:layout_centerVertical="true" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_border"
        android:padding="10dp">
        <LinearLayout
            android:id="@+id/signup_confirm_password_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/signup_confirm_password_hide_iv"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_hide" />
            <ImageView
                android:visibility="gone"
                android:id="@+id/signup_confirm_password_show_iv"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_show" />

        </LinearLayout>
        <EditText
            android:id="@+id/signup_confirm_password"
            style="@style/regular_18_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/signup_confirm_password_layout"
            android:layout_centerVertical="true" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_border"
        android:padding="10dp">

        <ImageView
            android:id="@+id/signup_dob_iv"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/calendar"

            />

        <EditText
            android:id="@+id/signup_dob"
            style="@style/regular_18_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/signup_dob_iv"
            android:background="@color/white"
            android:enabled="false"
            android:hint="Date of Birth" />
    </RelativeLayout>

    <TextView
        style="@style/bold_20_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="Gender" />

    <RadioGroup
        android:id="@+id/signup_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp">
    <RadioButton
        android:id="@+id/signup_male"
        style="@style/bold_18_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Male"
        android:layout_weight="1"/>

    <RadioButton
        android:id="@+id/signup_female"
        style="@style/bold_18_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Female"
        android:layout_weight="1"/>

    <RadioButton
        android:id="@+id/signup_transgender"
        style="@style/bold_18_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Transgender"
        android:layout_weight="1"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="City"
            android:padding="5dp"
            style="@style/bold_20_textview"
            android:gravity="center_vertical"
            android:layout_weight="2"/>
        <Spinner
            android:id="@+id/signup_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/dark_gray"
            android:popupBackground="@color/dark_gray"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp">
        <Button
            android:layout_marginRight="20dp"
            android:id="@+id/signup_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            style="@style/bold_18_button"
            app:backgroundTint="@null"
            android:background="@drawable/custom_button"/>
        <Button
            android:layout_marginLeft="20dp"
            android:id="@+id/signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            style="@style/bold_18_button"
            app:backgroundTint="@null"
            android:background="@drawable/custom_button"/>
    </LinearLayout>
</LinearLayout>

